<resources>
    <string name="app_name">Money</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="budgets_list">Budgets List</string>
    <string name="budget_details">Accounts List</string>
    <string name="create_account">Create Account</string>
    <string name="payee_transactions">Payee transactions List</string>
    <string name="name">Name : </string>
    <string name="last_modified">Last Modified : </string>
    <string name="First_Month">First Month : </string>
    <string name="last_Month">last Month : </string>
    <string name="type">type : </string>
    <string name="balance">balance : </string>

    <string name="bayee_name">Bayee Name : </string>
    <string name="bayee_account_name">Account Name : </string>
    <string name="category_name">Category : </string>





    <string name="account_name">Name</string>
    <string name="account_balance">Balance</string>


    <string name="error">Some thing Wrong </string>
    <string name="success_Created">Account created successfully</string>


</resources>