<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <import type="androidx.core.content.ContextCompat" />

        <variable
            name="budgetid"
            type="String"/>

        <variable
            name="viewmodel"
            type="com.example.money.features.createaccount.CreateAccountViewModel" />

    </data>


<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    tools:context=".features.createaccount.CreateAccountFragment">

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/types"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="225dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@null"
        android:hint="@string/account_name"
        android:imeOptions="flagNoExtractUi"
        android:maxLines="1"
        android:text="@={viewmodel.name}"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintTop_toBottomOf="@+id/types" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/balance_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:layout_marginTop="15dp"
        android:hint="@string/account_balance"
        android:imeOptions="flagNoExtractUi"
        android:inputType="number"
        android:maxLines="1"
        android:text="@={viewmodel.balance}"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintTop_toBottomOf="@+id/name_et" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/balance_et"
        android:onClick="@{(v) -> viewmodel.addAccount()}"
        />



</androidx.constraintlayout.widget.ConstraintLayout>
</layout>


<!--
    android:entries="@{ viewmodel.items }"
    android:selectedItemPosition="@={ viewmodel.itemPosition }"-->
