<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.widget.CompoundButton" />
        <variable
            name="budget"
            type="com.example.domain.models.badgetsdomain.Budget" />
        <variable
            name="viewmodel"
            type="com.example.money.features.budgets.BudgetsViewModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:id="@+id/envolope_card"
        android:layout_weight="1"
        android:checkable="true"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="5dp"
        android:onClick="@{() -> viewmodel.openBudget(budget.id)}"
        app:checkedIconTint="@color/white">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        >

        <TextView
            android:id="@+id/name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:text="@string/name"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/last_modefied_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:text="@string/last_modified"
            app:layout_constraintTop_toBottomOf="@+id/name_tv" />

        <TextView
            android:id="@+id/first_month_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:text="@string/First_Month"
            app:layout_constraintTop_toBottomOf="@+id/last_modefied_tv" />

        <TextView
            android:id="@+id/last_month_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:text="@string/last_Month"
            app:layout_constraintTop_toBottomOf="@+id/first_month_tv" />


        <TextView
            android:id="@+id/name_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:text="@{budget.name}"
            app:layout_constraintBottom_toBottomOf="@+id/name_tv"
            app:layout_constraintStart_toEndOf="@+id/name_tv"
            app:layout_constraintTop_toTopOf="@+id/name_tv" />




        <TextView
            android:id="@+id/last_modefied_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:text="@{budget.lastModifiedOn}"
            app:layout_constraintBottom_toBottomOf="@+id/last_modefied_tv"
            app:layout_constraintStart_toEndOf="@+id/last_modefied_tv"
            app:layout_constraintTop_toTopOf="@+id/last_modefied_tv" />
        <TextView
            android:id="@+id/first_month_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:text="@{budget.firstMonth}"
            app:layout_constraintBottom_toBottomOf="@+id/first_month_tv"
            app:layout_constraintStart_toEndOf="@+id/first_month_tv"
            app:layout_constraintTop_toTopOf="@+id/first_month_tv" />

        <TextView
            android:id="@+id/last_month_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:text="@{budget.lastMonth}"
            app:layout_constraintBottom_toBottomOf="@+id/last_month_tv"
            app:layout_constraintStart_toEndOf="@+id/last_month_tv"
            app:layout_constraintTop_toTopOf="@+id/last_month_tv" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>